@@ -19,7 +19,7 @@ namespace Fraunhofer.Fit.IoT.LoraMap {
       }
       InIReader ini = InIReader.GetInstance("settings");
       Dictionary<String, String> backenddata = ini.GetSection("mqtt");
-      backenddata.Add("topic", "lora/#;camera/#");
+      backenddata.Add("topic", "lora/#;camera/#;sfn/#");
       ADataBackend b = (ADataBackend)ABackend.GetInstance(backenddata, ABackend.BackendType.Data);
       _ = new Server(b, ini.GetSection("webserver"), InIReader.GetInstance("requests"));
     }
